<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="blocked_ip_error_message">You are attempting to log in to Box from a location that has not been approved by your admin. Please talk to your admin to resolve this issue.</string>
    <string name="boxsdk_Authenticating">Authenticating</string>
    <string name="boxsdk_Authentication_cancelled">Authentication Cancelled</string>
    <string name="boxsdk_Authentication_fail">Authentication Failed</string>
    <string name="boxsdk_Authentication_fail_forbidden">Contact your administrator to authorize this device.</string>
    <string name="boxsdk_Authentication_fail_url_mismatch">The redirect url is not valid</string>
    <string name="boxsdk_Cancel">Cancel</string>
    <string name="boxsdk_Continue">Continue</string>
    <string name="boxsdk_Create_folder">Create folder</string>
    <string name="boxsdk_Go_back">Go back</string>
    <string name="boxsdk_Please_wait">Please wait…</string>
    <string name="boxsdk_Security_Warning">Security Warning</string>
    <string name="boxsdk_Select">Select</string>
    <string name="boxsdk_Select_an_account_to_use">Select an account to use</string>
    <string name="boxsdk_There_are_problems_with_the_security_certificate_for_this_site">There are problems with the security certificate for this site.</string>
    <string name="boxsdk_Use_a_different_account">Use a different account</string>
    <string name="boxsdk_alert_dialog_cancel">Cancel</string>
    <string name="boxsdk_alert_dialog_ok">Submit</string>
    <string name="boxsdk_alert_dialog_password">Password</string>
    <string name="boxsdk_alert_dialog_text_entry">This website or application is requesting authentication.</string>
    <string name="boxsdk_alert_dialog_username">Username</string>
    <string name="boxsdk_button_ok">OK</string>
    <string name="boxsdk_button_okay">OKAY</string>
    <string name="boxsdk_common_name">common name:</string>
    <string name="boxsdk_details">Details</string>
    <string name="boxsdk_error_fatal_refresh">You have been logged out.</string>
    <string name="boxsdk_error_network_connection">Unable to detect a network connection</string>
    <string name="boxsdk_error_terms_of_service">Your administrator has changed your TOS. You must login, and accept the TOS to continue.</string>
    <string name="boxsdk_expires_on">expires on:</string>
    <string name="boxsdk_fingerprints">fingerprints:</string>
    <string name="boxsdk_issued_by">issued by:</string>
    <string name="boxsdk_issued_on">issued on:</string>
    <string name="boxsdk_issued_to">issued to:</string>
    <string name="boxsdk_no_offline_access">No offline access</string>
    <string name="boxsdk_no_offline_access_detail">"We couldn't detect a network connection."</string>
    <string name="boxsdk_no_offline_access_todo">To log in, connect to a WiFi or mobile data network.</string>
    <string name="boxsdk_org_name">organization name:</string>
    <string name="boxsdk_org_unit">organization unit:</string>
    <string name="boxsdk_screen_overlay_error_message">For your security you must disable screen dimmers or brightness correction applications to continue.</string>
    <string name="boxsdk_screen_overlay_error_title">Screen overlay detected</string>
    <string name="boxsdk_serial_number">serial number:</string>
    <string name="boxsdk_sha1_fingerprint">sha 1:</string>
    <string name="boxsdk_sha256_fingerprint">sha 256:</string>
    <string name="boxsdk_ssl_error_details">View details</string>
    <string name="boxsdk_ssl_error_warning_DATE_INVALID">The date of the certificate is invalid.</string>
    <string name="boxsdk_ssl_error_warning_EXPIRED">The certificate has expired.</string>
    <string name="boxsdk_ssl_error_warning_ID_MISMATCH">Hostname mismatch.</string>
    <string name="boxsdk_ssl_error_warning_INVALID">A generic error occurred.</string>
    <string name="boxsdk_ssl_error_warning_NOT_YET_VALID">The certificate is not yet valid.</string>
    <string name="boxsdk_ssl_error_warning_UNTRUSTED">The certificate authority is not trusted.</string>
    <string name="boxsdk_ssl_should_not_proceed">You should not proceed, especially if you have never seen this warning before for this site.</string>
    <string name="boxsdk_title_activity_oauth">OAuthActivity</string>
    <string name="boxsdk_unable_to_connect">Unable to connect</string>
    <string name="boxsdk_unable_to_connect_detail">We were unable to connect to your network.</string>
    <string name="boxsdk_unable_to_connect_todo">Check your network connection and try again.</string>
    <string name="boxsdk_validity_period">validity period:</string>
    <string name="activeDownloads">Active Downloads</string>
    <string name="add">Add</string>
    <string name="addSMBShare">SMB Share</string>
    <string name="addSMBShareDetails">Please enter SMB share information.</string>
    <string name="addService">Add Account</string>
    <string name="addToReadingList">Add to Reading List</string>
    <string name="addToReadingListPrompt">This will add %1$d comics to your reading list. Continue?</string>
    <string name="aggressiveCaching">Aggressive Caching</string>
    <string name="aggressiveCachingMsg">Cache more content for improved performance. Turn it off if you experience app crashes.</string>
    <string name="all">All</string>
    <string name="allComicsAlreadyDownloaded">All comics already downloaded.</string>
    <string name="alwaysHideTitle">Always Hide Titlebar</string>
    <string name="app_name">ComiCat</string>
    <string name="authCanceled">Operation Canceled!</string>
    <string name="authCompleted">Authorization Completed.</string>
    <string name="authFailed">Authorization Failed.</string>
    <string name="authorizeComiCat">Authorize ComiCat</string>
    <string name="autoAddPageNo">Auto Add Page Number</string>
    <string name="autoAddTitle">Auto Add Comic Title</string>
    <string name="autoRescanMessage">"Rescanning for Catalog Changes...
Auto rescan can be turned off from preferences."</string>
    <string name="backToCatalog">Back To Catalog</string>
    <string name="backgroundSyncInProgress">Background Sync is running.</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarkCleared">Bookmark deleted.</string>
    <string name="bookmarkPlaced">Bookmark placed at page no. %1$d</string>
    <string name="brightnessLevel">Brightness Level</string>
    <string name="brightnessLevelMsg">Brightness level of viewer</string>
    <string name="buildCatalog">Build My Catalog Now!</string>
    <string name="buildCatalogMessage1">"Click below to build your catalog by scanning your device's storage for comic files. It may take some time to complete depending on the amount of comic files you have."</string>
    <string name="buildCatalogMessage2">You can re-sync your catalog anytime from settings screen.</string>
    <string name="cacheReadingList">Cache Reading List</string>
    <string name="cacheReadingListMsg">Download all cloud storage comics on your reading list not present on your device.</string>
    <string name="cachingComic">"Caching '%1$s'..."</string>
    <string name="cancelAll">Cancel All</string>
    <string name="cancelAndIgnore">Cancel and Never Download</string>
    <string name="cancelAndIgnorePromptMsg">This will cancel the download and the comic file will be ignored in future syncs, continue?</string>
    <string name="cancelDownload">Cancel</string>
    <string name="cancel_label">Cancel</string>
    <string name="cancelled">Canceled</string>
    <string name="cannotWriteToLocation">ComiCat cannot write to the selected location.</string>
    <string name="cantConnetToShare">"Can't access share. Either the userid/password are incorrect or you don't have the required permissions."</string>
    <string name="cardBad">Unsupported or invalid format</string>
    <string name="cardShared">Mounted as mass storage</string>
    <string name="catalogMsg">Configure your catalog display.</string>
    <string name="catalogSettings">Catalog Settings</string>
    <string name="catalogThemeForThumbView">Catalog Theme for Thumbnail View</string>
    <string name="catalogTools">Catalog Tools</string>
    <string name="changeCoverImage">Change Cover Image</string>
    <string name="changeDownloadFolderPrompt">Change download folder and move already downloaded comics to the new location?</string>
    <string name="clear">Remove</string>
    <string name="clearBookmark">Clear bookmark</string>
    <string name="clearCompleted">Clear Completed</string>
    <string name="clearCompletedDownload">Auto Clear Completed Downloads</string>
    <string name="cloudSync">Cloud Sync</string>
    <string name="continueReading">Continue Reading</string>
    <string name="deleteFile">Delete File</string>
    <string name="deleteFolderTitle">Delete Folder</string>
    <string name="deleteRead">Delete Read</string>
    <string name="domain">Domain</string>
    <string name="excludeFileFromCatalog">Exclude File From Catalog</string>
    <string name="excludeFolderFromCatalog">Exclude Folder From Catalog</string>
    <string name="goTo">Go To</string>
    <string name="help">Help</string>
    <string name="hideTitle">Hide Title</string>
    <string name="makeLocalCopy">Make Local Copy</string>
    <string name="markPrivate">Mark Private</string>
    <string name="markRead">Mark Read</string>
    <string name="nextComic">Next Comic</string>
    <string name="open">Open</string>
    <string name="openFromBookmark">Open from bookmark</string>
    <string name="password">Password</string>
    <string name="pauseAll">Pause All</string>
    <string name="post">Post</string>
    <string name="previousComic">Previous Comic</string>
    <string name="readingHistory">Reading History</string>
    <string name="recentlyCompleted">Recently Completed</string>
    <string name="recreateThumbnails">Recreate Covers</string>
    <string name="removeAll">Remove All</string>
    <string name="removeFromCatalog">Remove From Catalog</string>
    <string name="removeLocalCopy">Remove Local Copy</string>
    <string name="rename">Rename</string>
    <string name="restart">Restart</string>
    <string name="resumeAll">Resume All</string>
    <string name="resync">Resync Catalog</string>
    <string name="retryFailed">Retry Failed</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="setAsWallpaper">Set Wallpaper</string>
    <string name="setFrame">Set Frame</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="showPrivateFolders">Show Private Folders</string>
    <string name="showStats">Stats</string>
    <string name="smbUrl">SMB Url</string>
    <string name="sort">Sort</string>
    <string name="sortCatalog">Sort Catalog</string>
    <string name="startReading">Start Reading</string>
    <string name="sync">Sync</string>
    <string name="touchOptions">Touch Options</string>
    <string name="username">Username</string>
</resources>