<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/open" android:title="@string/open" />
    <item android:id="@id/openFromBookmark" android:title="@string/openFromBookmark" />
    <item android:id="@id/clearBookmark" android:title="@string/clearBookmark" />
    <item android:id="@id/addToReadingList" android:title="@string/addToReadingList" />
    <item android:id="@id/markRead" android:title="@string/markRead" />
    <item android:id="@id/rename" android:title="@string/rename" />
    <item android:id="@id/changeCover" android:title="@string/changeCoverImage" />
    <item android:id="@id/makeLocalCopy" android:title="@string/makeLocalCopy" />
    <item android:id="@id/removeLocalCopy" android:title="@string/removeLocalCopy" />
    <item android:id="@id/excludeFile" android:title="@string/excludeFileFromCatalog" />
    <item android:id="@id/excludeFolder" android:title="@string/excludeFolderFromCatalog" />
    <item android:id="@id/delete" android:title="@string/deleteFile" />
    <item android:id="@id/removeFromCatalog" android:title="@string/removeFromCatalog" />
</menu>