<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="250.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout style="@style/titleInputPair">
        <TextView android:text="@string/smbUrl" style="@style/inputTitle" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="smb://" />
            <EditText android:id="@id/smbUrl" style="@style/inputBox" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout style="@style/titleInputPair">
        <TextView android:text="@string/domain" style="@style/inputTitle" />
        <EditText android:id="@id/domain" style="@style/inputBox" />
    </LinearLayout>
    <LinearLayout style="@style/titleInputPair">
        <TextView android:text="@string/username" style="@style/inputTitle" />
        <EditText android:id="@id/username" style="@style/inputBox" />
    </LinearLayout>
    <LinearLayout style="@style/titleInputPair">
        <TextView android:text="@string/password" style="@style/inputTitle" />
        <EditText android:id="@id/password" style="@style/inputBox" />
    </LinearLayout>
</LinearLayout>