<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/url_section" android:layout_alignParentTop="true" style="@style/titleInputPair">
        <TextView android:text="@string/smbUrl" style="@style/inputTitle" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="smb://" />
            <EditText android:id="@id/smbUrl" style="@style/inputBox" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/domain_section" android:layout_below="@id/url_section" style="@style/titleInputPair">
        <TextView android:text="@string/domain" style="@style/inputTitle" />
        <EditText android:id="@id/domain" style="@style/inputBox" />
    </LinearLayout>
    <LinearLayout android:id="@id/username_section" android:layout_below="@id/domain_section" style="@style/titleInputPair">
        <TextView android:text="@string/username" style="@style/inputTitle" />
        <EditText android:id="@id/username" style="@style/inputBox" />
    </LinearLayout>
    <LinearLayout android:id="@id/password_section" android:layout_below="@id/username_section" style="@style/titleInputPair">
        <TextView android:text="@string/password" style="@style/inputTitle" />
        <EditText android:id="@id/password" android:inputType="textPassword" style="@style/inputBox" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/buttons_section" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/password_section">
        <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1.0" />
        <Button android:id="@id/add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>