<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:gravity="top" android:id="@id/commentText" android:layout_width="fill_parent" android:layout_height="120.0dip" />
        <CheckBox android:id="@id/addTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/autoAddTitle" />
        <CheckBox android:id="@id/addPageNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/autoAddPageNo" />
        <LinearLayout android:layout_gravity="bottom" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1.0" />
            <Button android:id="@id/post" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>