<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout android:id="@id/drawer_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/catalogContainer" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <GridView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/catalogFolderGrid" android:layout_width="wrap_content" android:layout_height="fill_parent" android:stretchMode="columnWidth" android:numColumns="auto_fit" />
        <GridView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/catalogFileGrid" android:layout_width="wrap_content" android:layout_height="fill_parent" android:stretchMode="columnWidth" android:numColumns="auto_fit" />
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/buildCatalogView" android:background="@drawable/translucent_back" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip">
            <TextView android:textColor="#ff333333" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/buildCatalogMessage1" />
            <Button android:id="@id/buildCatalog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/buildCatalog" />
            <TextView android:textColor="#ff333333" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/buildCatalogMessage2" />
        </LinearLayout>
    </FrameLayout>
    <include layout="@layout/drawer_items" />
</android.support.v4.widget.DrawerLayout>